@@ -20,6 +20,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.ResponseEntity;
 
+import java.time.LocalDate;
+import java.time.ZoneId;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -31,91 +33,59 @@ import static org.mockito.Mockito.*;
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class OrderServiceTests {
 
+    private static final long COOK_ID = 1L;
+    private static final long SCHEDULE_ID = 1L;
+    private static final long MEAL_ID = 2L;
+    private static final long CUSTOMER_ID = 1L;
+    private static final long PAST_MEAL_ID = 3L;
+    private static final long ORDER_ID = 1L;
+    private static final long LIMITED_MEAL_ID = 4L;
+    private static final int DAYS_TO_BE_ADDED = 10;
+    private static final long MAX_ORDER_LIMIT = 100L;
+    private static final Double MEAL_PRICE = 100.00;
+    private static final long LIMITED_MEAL_MAX_ORDER_LIMIT = 1L;
+    private static final int DAYS_TO_BE_SUBTRACTED = -10;
+    private static final int MEAL_QTY = 2;
+    private static final int YEAR = 2023;
+    private static final int MONTH = Calendar.DECEMBER;
+    private static final int DAY = Calendar.DAY_OF_MONTH;
+    private static Date DATE;
+
     @Mock
     private OrderRepository orderRepository;
-
     @Mock
     private MealRepository mealRepository;
-
     @Mock
     private CustomerRepository customerRepository;
-
     @Mock
     private MealorderRepository mealorderRepository;
-
     @InjectMocks
     private OrderService orderService;
-
     private Schedule schedule;
-
     private Cook cook;
-
     private Meal meal;
-
     private Meal pastMeal;
-
     private Meal limitedMeal;
-
     private Customer customer;
-
     private Order order;
 
     @BeforeAll
     public void init() {
-        cook = new Cook();
-        cook.setId(1L);
-        schedule = new Schedule();
-        schedule.setId(1L);
-        schedule.setName("Week 1");
-        schedule.setStart_date(new Date(2023, 11, 10, 10, 10, 10));
-        schedule.setCook(cook);
-        meal = new Meal();
-        meal.setId(2L);
-        meal.setName("Pav Bhaji");
+        LocalDate localDate = LocalDate.of(YEAR, MONTH, DAY);
+        DATE = Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
+        buildCookModel();
+        buildScheduleModel();
         Date currentDate = new Date();
         Calendar cal = Calendar.getInstance();
         cal.setTime(currentDate);
-        cal.add(Calendar.DATE, 10);
+        cal.add(Calendar.DATE, DAYS_TO_BE_ADDED);
         Date mealDate = cal.getTime();
-        meal.setMealDate(mealDate);
-        meal.setSlot("lunch");
-        meal.setMaxOrderLimit(100L);
-        meal.setOrderDeadline(mealDate);
-        meal.setImage("pavbhajiurl");
-        meal.setPrice(100.00);
-        meal.setSchedule(schedule);
-        pastMeal = new Meal();
-        pastMeal.setId(3L);
-        pastMeal.setName("Chole");
-        Calendar pastCalendar = Calendar.getInstance();
-        pastCalendar.setTime(currentDate);
-        pastCalendar.add(Calendar.DATE, -10);
-        Date pastDate = pastCalendar.getTime();
-        pastMeal.setMealDate(pastDate);
-        pastMeal.setSlot("lunch");
-        pastMeal.setMaxOrderLimit(100L);
-        pastMeal.setOrderDeadline(pastDate);
-        pastMeal.setImage("pavbhajiurl");
-        pastMeal.setPrice(100.00);
-        pastMeal.setSchedule(schedule);
-        limitedMeal = new Meal();
-        limitedMeal.setId(4L);
-        limitedMeal.setName("Rajma");
-        limitedMeal.setMealDate(mealDate);
-        limitedMeal.setSlot("lunch");
-        limitedMeal.setMaxOrderLimit(1L);
-        limitedMeal.setOrderDeadline(mealDate);
-        limitedMeal.setImage("pavbhajiurl");
-        limitedMeal.setPrice(100.00);
-        limitedMeal.setSchedule(schedule);
-        customer = new Customer();
-        customer.setId(1L);
-        customer.setName("Adam");
-        customer.setPhoneNumber("474755959");
-        order = new Order();
-        order.setId(1L);
+        buildMealModel(mealDate);
+        buildPastMeal(currentDate);
+        buildLimitedMeal(mealDate);
+        buildCustomer();
+        buildOrder();
     }
-
 
     @Test
     public void testCreateOrder() {
@@ -123,37 +93,30 @@ public class OrderServiceTests {
         CreateOrderInput createOrderInput = new CreateOrderInput();
         createOrderInput.setType("Subscription");
         createOrderInput.setStatus(OrderStatus.PENDING);
-        createOrderInput.setCustomerId(1L);
+        createOrderInput.setCustomerId(CUSTOMER_ID);
 
         MealorderInput input = new MealorderInput();
-        input.setMealId(2L);
-        input.setQuantity(2L);
-        List<MealorderInput> mealorderInputs = Arrays.asList(input);
-        createOrderInput.setMealorderInputs(mealorderInputs);
+        input.setMealId(MEAL_ID);
+        input.setQuantity(MEAL_ID);
+        List<MealorderInput> mealOrderInputs = List.of(input);
+        createOrderInput.setMealorderInputs(mealOrderInputs);
 
-//        Meal mockMeal = new Meal();
-//        mockMeal.setId(2L);
-//        mockMeal.setCurrentOrderCount(0L);
-//        mockMeal.setMaxOrderLimit(5L);
-//        mockMeal.setOrderDeadline(new Date(System.currentTimeMillis() + 100000)); // deadline in the future
-
-        when(customerRepository.findById(1L)).thenReturn(Optional.of(new Customer()));
-        when(mealRepository.findAllByIdIn(Arrays.asList(2L))).thenReturn(Arrays.asList(meal));
-        when(orderRepository.save(any(Order.class))).thenAnswer(invocation -> invocation.getArgument(0));
-        when(mealRepository.save(any(Meal.class))).thenAnswer(invocation -> invocation.getArgument(0));
-        when(mealorderRepository.save(any(Mealorder.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(customerRepository.findById(CUSTOMER_ID)).thenReturn(
+                Optional.of(new Customer()));
+        when(mealRepository.findAllByIdIn(List.of(MEAL_ID))).
+                thenReturn(Collections.singletonList(meal));
+        when(orderRepository.save(any(Order.class))).thenAnswer(invocation ->
+                invocation.getArgument(0));
+        when(mealRepository.save(any(Meal.class))).thenAnswer(invocation ->
+                invocation.getArgument(0));
+        when(mealorderRepository.save(any(Mealorder.class))).thenAnswer(invocation ->
+                invocation.getArgument(0));
 
         // Act
         ResponseEntity<Order> response = orderService.createOrder(createOrderInput);
 
-        assertEquals(response.getBody().getAmount(), meal.getPrice() * 2);
-        //ResponseEntity<Order> response1 = ord.createOrder(createOrderInput);
-
-//        // Assert
-//        assertEquals(HttpStatus.CREATED, response.getStatusCode());
-//        assertNotNull(response.getBody());
-//        assertEquals(OrderStatus.PENDING, response.getBody().getStatus());
-//        assertEquals(1, mockMeal.getCurrentOrderCount());
+        assertEquals(Objects.requireNonNull(response.getBody()).getAmount(),
+                meal.getPrice() * MEAL_QTY);
     }
 
     @Test
@@ -162,19 +125,22 @@ public class OrderServiceTests {
         CreateOrderInput createOrderInput = new CreateOrderInput();
         createOrderInput.setType("Subscription");
         createOrderInput.setStatus(OrderStatus.PENDING);
-        createOrderInput.setCustomerId(1L);
+        createOrderInput.setCustomerId(CUSTOMER_ID);
 
         MealorderInput input = new MealorderInput();
-        input.setMealId(3L);
-        input.setQuantity(2L);
-        List<MealorderInput> mealorderInputs = Arrays.asList(input);
-        createOrderInput.setMealorderInputs(mealorderInputs);
+        input.setMealId(PAST_MEAL_ID);
+        input.setQuantity(MEAL_ID);
+        List<MealorderInput> mealOrderInputs = List.of(input);
+        createOrderInput.setMealorderInputs(mealOrderInputs);
 
-        when(customerRepository.findById(1L)).thenReturn(Optional.of(new Customer()));
-        when(mealRepository.findAllByIdIn(Arrays.asList(3L))).thenReturn(Arrays.asList(pastMeal));
+        when(customerRepository.findById(CUSTOMER_ID)).thenReturn(
+                Optional.of(new Customer()));
+        when(mealRepository.findAllByIdIn(List.of(PAST_MEAL_ID))).thenReturn(
+                Collections.singletonList(pastMeal));
 
         // Act
-        assertThrows(RuntimeException.class, () -> orderService.createOrder(createOrderInput));
+        assertThrows(RuntimeException.class, () -> orderService.
+                createOrder(createOrderInput));
         verify(mealRepository, never()).save(any(Meal.class));
         verify(orderRepository, never()).save(any(Order.class));
     }
@@ -185,19 +151,22 @@ public class OrderServiceTests {
         CreateOrderInput createOrderInput = new CreateOrderInput();
         createOrderInput.setType("Subscription");
         createOrderInput.setStatus(OrderStatus.PENDING);
-        createOrderInput.setCustomerId(1L);
+        createOrderInput.setCustomerId(CUSTOMER_ID);
 
         MealorderInput input = new MealorderInput();
-        input.setMealId(4L);
-        input.setQuantity(2L);
-        List<MealorderInput> mealorderInputs = Arrays.asList(input);
-        createOrderInput.setMealorderInputs(mealorderInputs);
+        input.setMealId(LIMITED_MEAL_ID);
+        input.setQuantity(MEAL_ID);
+        List<MealorderInput> mealOrderInputs = List.of(input);
+        createOrderInput.setMealorderInputs(mealOrderInputs);
 
-        when(customerRepository.findById(1L)).thenReturn(Optional.of(new Customer()));
-        when(mealRepository.findAllByIdIn(Arrays.asList(4L))).thenReturn(Arrays.asList(limitedMeal));
+        when(customerRepository.findById(CUSTOMER_ID)).thenReturn(
+                Optional.of(new Customer()));
+        when(mealRepository.findAllByIdIn(List.of(LIMITED_MEAL_ID))).thenReturn(
+                Collections.singletonList(limitedMeal));
 
         // Act
-        assertThrows(RuntimeException.class, () -> orderService.createOrder(createOrderInput));
+        assertThrows(RuntimeException.class, () ->
+                orderService.createOrder(createOrderInput));
         verify(mealRepository, never()).save(any(Meal.class));
         verify(orderRepository, never()).save(any(Order.class));
     }
@@ -208,20 +177,22 @@ public class OrderServiceTests {
         CreateOrderInput createOrderInput = new CreateOrderInput();
         createOrderInput.setType("Subscription");
         createOrderInput.setStatus(OrderStatus.PENDING);
-        createOrderInput.setCustomerId(1L);
+        createOrderInput.setCustomerId(CUSTOMER_ID);
 
         MealorderInput input = new MealorderInput();
-        input.setMealId(5L);
-        input.setQuantity(2L);
-        List<MealorderInput> mealorderInputs = Arrays.asList(input);
-        createOrderInput.setMealorderInputs(mealorderInputs);
+        input.setMealId(MEAL_ID);
+        input.setQuantity(MEAL_ID);
+        List<MealorderInput> mealOrderInputs = List.of(input);
+        createOrderInput.setMealorderInputs(mealOrderInputs);
 
-        when(customerRepository.findById(1L)).thenReturn(Optional.of(new Customer()));
-        //doReturn(new ArrayList<Meal>()).when(mealRepository).deleteById(1L);
-        when(mealRepository.findAllByIdIn(Arrays.asList(5L))).thenReturn(new ArrayList<Meal>());
+        when(customerRepository.findById(CUSTOMER_ID)).thenReturn(
+                Optional.of(new Customer()));
+        when(mealRepository.findAllByIdIn(List.of(MEAL_ID))).thenReturn(
+                new ArrayList<>());
 
         // Act
-        assertThrows(EntityNotFoundException.class, () -> orderService.createOrder(createOrderInput));
+        assertThrows(EntityNotFoundException.class, () ->
+                orderService.createOrder(createOrderInput));
         verify(mealRepository, never()).save(any(Meal.class));
         verify(orderRepository, never()).save(any(Order.class));
     }
@@ -229,24 +200,21 @@ public class OrderServiceTests {
     @Test
     public void testGetOrderById() {
         // Arrange
-
-        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
-
-        Order getOrder = orderService.getOrderById(1L);
+        when(orderRepository.findById(CUSTOMER_ID)).thenReturn(Optional.of(order));
+        Order getOrder = orderService.getOrderById(CUSTOMER_ID);
 
         // Act
-        assertEquals(1L, getOrder.getId());
+        assertEquals(CUSTOMER_ID, getOrder.getId());
     }
 
     @Test
-    public void testgetOrdersByCustomer() {
+    public void testGetOrdersByCustomer() {
         // Arrange
         List<Order> orderList = new ArrayList<>();
         orderList.add(order);
-
-        when(orderRepository.findAllByCustomer_IdOrderByCreatedAtDesc(1L)).thenReturn(orderList);
-
-        List<Order> custOrderList = orderService.getOrdersByCustomer(1L);
+        when(orderRepository.findAllByCustomer_IdOrderByCreatedAtDesc(ORDER_ID)).
+                thenReturn(orderList);
+        List<Order> custOrderList = orderService.getOrdersByCustomer(CUSTOMER_ID);
 
         // Act
         assertEquals(custOrderList.size(), orderList.size());
@@ -261,10 +229,8 @@ public class OrderServiceTests {
         order.setMealorders(Arrays.asList(mealorder));
         orderList.add(order);
 
-
-        when(orderRepository.findAllByMealorders_Meal_IdOrderByCreatedAtAsc(2L)).thenReturn(orderList);
-
-        List<Order> custOrderList = orderService.getOrdersByMeal(2L);
+        when(orderRepository.findAllByMealorders_Meal_IdOrderByCreatedAtAsc(ORDER_ID)).thenReturn(orderList);
+        List<Order> custOrderList = orderService.getOrdersByMeal(ORDER_ID);
 
         // Act
         assertEquals(custOrderList.size(), orderList.size());
@@ -273,8 +239,8 @@ public class OrderServiceTests {
     @Test
     public void testUpdateOrderStatus() {
         // Arrange
-        Long mealOrderId= 1L;
-        Long orderId= 1L;
+        Long mealOrderId= ORDER_ID;
+        Long orderId= ORDER_ID;
         Long customerId= customer.getId();
         UpdateOrderStatus updateOrderStatus = new UpdateOrderStatus();
         updateOrderStatus.setMealOrderId(mealOrderId);
@@ -293,204 +259,78 @@ public class OrderServiceTests {
         Mealorder updatedOrder = orderService.updateOrderStatus(updateOrderStatus).getBody();
 
         // Act
+        assert updatedOrder != null;
         assertEquals(updatedOrder.getStatus(),updateOrderStatus.getStatus());
         assertEquals(updateOrderStatus.getOrderId(),orderId);
         assertEquals(updateOrderStatus.getMealOrderId(),mealOrderId);
         assertEquals(updateOrderStatus.getCustomerId(),customerId);
     }
 
-//    @Test
-//    public void testUpdateOrderStatus() {
-//        // Arrange
-//        Long orderId = 1L;
-//        Order existingOrder = new Order();
-//        existingOrder.setId(orderId);
-//        existingOrder.setStatus(OrderStatus.PENDING);
-//
-//        when(orderRepository.findById(orderId)).thenReturn(Optional.of(existingOrder));
-//        when(orderRepository.save(any(Order.class))).thenAnswer(invocation -> invocation.getArgument(0));
-//
-//        // Act
-//        ResponseEntity<Order> response = orderService.updateOrderStatus(orderId, OrderStatus.COMPLETED);
-//
-//        // Assert
-//        assertEquals(HttpStatus.CREATED, response.getStatusCode());
-//        assertNotNull(response.getBody());
-//        assertEquals(OrderStatus.COMPLETED, response.getBody().getStatus());
-//    }
+    private void buildOrder() {
+        order = new Order();
+        order.setId(ORDER_ID);
+    }
 
-//    @Test
-//    public void testGetOrderById() {
-//        // Arrange
-//        Long orderId = 1L;
-//        Order mockOrder = new Order();
-//        when(orderRepository.findById(orderId)).thenReturn(Optional.of(mockOrder));
-//
-//        // Act
-//        Order result = orderService.getOrderById(orderId);
-//
-//        // Assert
-//        assertNotNull(result);
-//        assertSame(mockOrder, result);
-//    }
+    private void buildCustomer() {
+        customer = new Customer();
+        customer.setId(CUSTOMER_ID);
+        customer.setName("Adam");
+        customer.setPhoneNumber("474755959");
+    }
 
-//    @Test
-//    public void testGetAllOrders() {
-//        // Arrange
-//        Order order1 = new Order();
-//        Order order2 = new Order();
-//        when(orderRepository.findAll(Sort.by(Sort.Direction.DESC, "createdAt")))
-//                .thenReturn(Arrays.asList(order2, order1));
-//
-//        // Act
-//        List<Order> result = orderService.getAllOrders();
-//
-//        // Assert
-//        assertNotNull(result);
-//        assertEquals(2, result.size());
-//        assertSame(order2, result.get(0)); // Order by descending createdAt
-//        assertSame(order1, result.get(1));
-//    }
+    private void buildLimitedMeal(Date mealDate) {
+        limitedMeal = new Meal();
+        limitedMeal.setId(LIMITED_MEAL_ID);
+        limitedMeal.setName("Rajma");
+        limitedMeal.setMealDate(mealDate);
+        limitedMeal.setSlot("lunch");
+        limitedMeal.setMaxOrderLimit(LIMITED_MEAL_MAX_ORDER_LIMIT);
+        limitedMeal.setOrderDeadline(mealDate);
+        limitedMeal.setImage("pavbhajiurl");
+        limitedMeal.setPrice(OrderServiceTests.MEAL_PRICE);
+        limitedMeal.setSchedule(schedule);
+    }
 
-//    @Test
-//    public void testGetOrdersByCustomer() {
-//        // Arrange
-//        Long customerId = 1L;
-//        List<Order> mockOrders = new ArrayList<>();
-//        when(orderRepository.findAllByCustomer_IdOrderByCreatedAtDesc(customerId))
-//                .thenReturn(mockOrders);
-//
-//        // Act
-//        List<Order> result = orderService.getOrdersByCustomer(customerId);
-//
-//        // Assert
-//        assertNotNull(result);
-//        assertSame(mockOrders, result);
-//    }
+    private void buildPastMeal(Date currentDate) {
+        pastMeal = new Meal();
+        pastMeal.setId(PAST_MEAL_ID);
+        pastMeal.setName("Chole");
+        Calendar pastCalendar = Calendar.getInstance();
+        pastCalendar.setTime(currentDate);
+        pastCalendar.add(Calendar.DATE, DAYS_TO_BE_SUBTRACTED);
+        Date pastDate = pastCalendar.getTime();
+        pastMeal.setMealDate(pastDate);
+        pastMeal.setSlot("lunch");
+        pastMeal.setMaxOrderLimit(OrderServiceTests.MAX_ORDER_LIMIT);
+        pastMeal.setOrderDeadline(pastDate);
+        pastMeal.setImage("pavbhajiurl");
+        pastMeal.setPrice(OrderServiceTests.MEAL_PRICE);
+        pastMeal.setSchedule(schedule);
+    }
 
-//    @Test
-//    public void testGetOrdersByCook() {
-//        // Arrange
-//        Long cookId = 1L;
-//        List<Order> mockOrders = new ArrayList<>();
-//        when(orderRepository.findAllByMeal_Menu_Cook_IdOrderByCreatedAtDesc(cookId))
-//                .thenReturn(mockOrders);
-//
-//        // Act
-//        List<Order> result = orderService.getOrdersByCook(cookId);
-//
-//        // Assert
-//        assertNotNull(result);
-//        assertSame(mockOrders, result);
-//    }
+    private void buildMealModel(Date mealDate) {
+        meal = new Meal();
+        meal.setId(MEAL_ID);
+        meal.setName("Pav Bhaji");
+        meal.setMealDate(mealDate);
+        meal.setSlot("lunch");
+        meal.setMaxOrderLimit(OrderServiceTests.MAX_ORDER_LIMIT);
+        meal.setOrderDeadline(mealDate);
+        meal.setImage("pavbhajiurl");
+        meal.setPrice(OrderServiceTests.MEAL_PRICE);
+        meal.setSchedule(schedule);
+    }
 
-//    @Test
-//    public void testGetOrdersByMenu() {
-//        // Arrange
-//        Long menuId = 1L;
-//        List<Order> mockOrders = new ArrayList<>();
-//        when(orderRepository.findAllByMeal_Menu_IdOrderByCreatedAtDesc(menuId))
-//                .thenReturn(mockOrders);
-//
-//        // Act
-//        List<Order> result = orderService.getOrdersByMenu(menuId);
-//
-//        // Assert
-//        assertNotNull(result);
-//        assertSame(mockOrders, result);
-//    }
-//
-//    @Test
-//    public void testGetOrdersByStatusAndCook() {
-//        // Arrange
-//        Long cookId = 1L;
-//        OrderStatus status = OrderStatus.COMPLETED;
-//        List<Order> mockOrders = new ArrayList<>();
-//        when(orderRepository.findAllByStatusAndAndCustomer_IdOrderByCreatedAtDesc(status, cookId))
-//                .thenReturn(mockOrders);
-//
-//        // Act
-//        List<Order> result = orderService.getOrdersByStatusAndCook(cookId, status);
-//
-//        // Assert
-//        assertNotNull(result);
-//        assertSame(mockOrders, result);
-//    }
+    private void buildScheduleModel() {
+        schedule = new Schedule();
+        schedule.setId(SCHEDULE_ID);
+        schedule.setName("Week 1");
+        schedule.setStart_date(DATE);
+        schedule.setCook(cook);
+    }
 
-//    @Test
-//    public void testCreateOrder_OrderLimitReached() {
-//        // Arrange
-//        CreateOrderInput createOrderInput = new CreateOrderInput();
-//        createOrderInput.setType("Online");
-//        createOrderInput.setStatus(OrderStatus.PENDING);
-//        createOrderInput.setCustomerId(1L);
-//        createOrderInput.setMealId(2L);
-//
-//        Meal mockMeal = new Meal();
-//        mockMeal.setId(2L);
-//        mockMeal.setCurrentOrderCount(5L); // Max order limit reached
-//        mockMeal.setMaxOrderLimit(5L);
-//        mockMeal.setOrderDeadline(new Date(System.currentTimeMillis() + 100000)); // deadline in the future
-//
-//        when(customerRepository.findById(1L)).thenReturn(Optional.of(new Customer()));
-//        when(mealRepository.findById(2L)).thenReturn(Optional.of(mockMeal));
-//
-//        // Act and Assert
-//        assertThrows(RuntimeException.class, () -> orderService.createOrder(createOrderInput));
-//        verify(mealRepository, never()).save(any(Meal.class));
-//        verify(orderRepository, never()).save(any(Order.class));
-//    }
-
-//    @Test
-//    public void testCreateOrder_OrderAfterDeadline() {
-//        // Arrange
-//        CreateOrderInput createOrderInput = new CreateOrderInput();
-//        createOrderInput.setType("Online");
-//        createOrderInput.setStatus(OrderStatus.PENDING);
-//        createOrderInput.setCustomerId(1L);
-//        createOrderInput.setMealId(2L);
-//
-//        Meal mockMeal = new Meal();
-//        mockMeal.setId(2L);
-//        mockMeal.setCurrentOrderCount(3L); // Still below max order limit
-//        mockMeal.setMaxOrderLimit(5L);
-//        mockMeal.setOrderDeadline(new Date(System.currentTimeMillis() - 100000)); // deadline in the past
-//
-//        when(customerRepository.findById(1L)).thenReturn(Optional.of(new Customer()));
-//        when(mealRepository.findById(2L)).thenReturn(Optional.of(mockMeal));
-//
-//        // Act and Assert
-//        assertThrows(RuntimeException.class, () -> orderService.createOrder(createOrderInput));
-//        verify(mealRepository, never()).save(any(Meal.class));
-//        verify(orderRepository, never()).save(any(Order.class));
-//    }
-
-//    @Test
-//    public void testCreateOrder_SuccessfulOrder() {
-//        // Arrange
-//        CreateOrderInput createOrderInput = new CreateOrderInput();
-//        createOrderInput.setType("Online");
-//        createOrderInput.setStatus(OrderStatus.PENDING);
-//        createOrderInput.setCustomerId(1L);
-//        createOrderInput.setMealId(2L);
-//
-//        Meal mockMeal = new Meal();
-//        mockMeal.setId(2L);
-//        mockMeal.setCurrentOrderCount(3L); // Still below max order limit
-//        mockMeal.setMaxOrderLimit(5L);
-//        mockMeal.setOrderDeadline(new Date(System.currentTimeMillis() + 100000)); // deadline in the future
-//
-//        when(customerRepository.findById(1L)).thenReturn(Optional.of(new Customer()));
-//        when(mealRepository.findById(2L)).thenReturn(Optional.of(mockMeal));
-//        when(orderRepository.save(any(Order.class))).thenAnswer(invocation -> invocation.getArgument(0));
-//
-//        // Act
-//        ResponseEntity<Order> response = orderService.createOrder(createOrderInput);
-//
-//        // Assert
-//        assertEquals(HttpStatus.CREATED, response.getStatusCode());
-//        assertNotNull(response.getBody());
-//        assertEquals(OrderStatus.PENDING, response.getBody().getStatus());
-//        assertEquals(4, mockMeal.getCurrentOrderCount()); // One more order added
-//    }
+    private void buildCookModel() {
+        cook = new Cook();
+        cook.setId(COOK_ID);
+    }
 }
